directive added excel upload

--- a/src/partials/admin/upload.html
+++ b/src/partials/admin/upload.html
@@ -4,12 +4,18 @@
 
 <!--<div ng-if="security.isAuthenticated()"> -->
 
+
+
 <form ng-controller="UploadObservationsCtrl">
-    <input type="file"  onchange="angular.element(this).scope().filesChanged(this)" multiple accept=".csv, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel"/>
+
+  <input type="file"  onchange="angular.element(this).scope().filesChanged(this)" multiple accept=".csv, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel"/>
     <button ng-click="upload()">Upload</button>
- <!--   <li ng-repeat="file in files">{{file.name}}</li>  -->
+  <li ng-repeat="file in files">{{file.name}}</li>
 
     {{results}}
+
+
+       <upload-observations/>
 </form>
 
 
