directive with excel html file works

--- a/src/partials/admin/upload.html
+++ b/src/partials/admin/upload.html
@@ -8,11 +8,11 @@
 
 <form ng-controller="UploadObservationsCtrl">
 
-  <input type="file"  onchange="angular.element(this).scope().filesChanged(this)" multiple accept=".csv, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel"/>
+  <!--  <input type="file"  onchange="angular.element(this).scope().filesChanged(this)" multiple accept=".csv, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel"/>
     <button ng-click="upload()">Upload</button>
   <li ng-repeat="file in files">{{file.name}}</li>
 
-    {{results}}
+    {{results}}  -->
 
 
        <upload-observations/>
