--- a/src/partials/user/upload_observations.html
+++ b/src/partials/user/upload_observations.html
@@ -1,8 +1,9 @@
 
 
-
-<input type="file"  onchange="angular.element(this).scope().filesChanged(this)" multiple accept=".csv, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel"/>
+ <area></area><input type="file"  onchange="angular.element(this).scope().filesChanged(this)" multiple accept=".csv, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel"/>
     <button ng-click="upload()">Upload</button>
+  <li ng-repeat="file in files">{{file.name}}</li>
 
+    {{results}}
 
 
