excel printing (ugly) ok

--- a/src/partials/user/upload_observations.html
+++ b/src/partials/user/upload_observations.html
@@ -15,3 +15,10 @@
 
     {{results}}  -->
 
+   <br /><br />
+    <p>The following information were uploaded:</p>
+
+
+   <!-- <span ng-bind-template="{{entry}}"></span>  -->
+    <div ng-bind-html="entry"></div>
+
