--- a/src/partials/user/upload_observations.html
+++ b/src/partials/user/upload_observations.html
@@ -16,7 +16,7 @@
     {{results}}  -->
 
    <br /><br />
-    <p>The following information were uploaded:</p>
+    <p>The following information were uploaded (if not correct, please correct individually):</p>
 
 
    <!-- <span ng-bind-template="{{entry}}"></span>  -->
