login works + show

--- a/src/partials/user/edit_observation.html
+++ b/src/partials/user/edit_observation.html
@@ -1,16 +1,16 @@
 
 <h1><b> Edit observation {{ entry.id }} <b></h1>
 
-<div ng-if="security.isAuthenticated()">
+<!-- <div ng-if="security.isAuthenticated()">  -->
 
 <div formula="formula"></div>
 <button ng-click="duplicate()">duplicate</button>
 
-</div>
+<!-- </div> -->
 
-<div ng-show="!security.isAuthenticated()">
+<!-- <div ng-show="!security.isAuthenticated()">
   <p>Please <a href="/sighting/">log in</a> in order to view your sightings</p>
-</div>
+</div> -->
 
 
 
