fixed excel upload user

--- a/src/partials/user/my_observations.html
+++ b/src/partials/user/my_observations.html
@@ -6,7 +6,7 @@
 
 <div ng-if="security.isAuthenticated()">
 
-<a href="observations/__new/edit">Report new observations</a><br /><br />
+<a href="observations/__new/edit">Report new observations</a> <i>or</i> submit Excel sheet by <a href="mailto:magnus.andersen@npolar.no">email</a><br /><br />
 
 
  <!--<form id="submit" ng-submit="submit()" class="pure-form pure-form-stacked">
