--- a/src/partials/open/_myuser.html
+++ b/src/partials/open/_myuser.html
@@ -1,7 +1,9 @@
+
 <div class="login-logout">
   <div ng-show="security.isAuthenticated()">
 
-    <button ng-click="logout()">Logout</button> <b>{{ user.name }}</b> (<a title="View profile for user {{user.username}}" ng-href="/user/{{user.username}}">{{ user.email }} </a>)
+    <button ng-click="logout()">Logout</button> <b>{{ user.username }}</b>
+    (<a title="View profile for user {{user.username}}" ng-href="https://data.npolar.no/user/{{user.username}}">{{ user.username }} </a>)
   </div>
 
   <div ng-show="security.notAuthenticated()">
@@ -17,8 +19,8 @@
       <p></p>
       <button id="login2" type="submit" ng-click="login(user.username, user.password)">Login</button>
       </section>
-      <a ng-href="https://app2.data.npolar.no/user/reset?username={{user.username}}">Forgot password?</a>&nbsp;
-      <a href="https://app2.data.npolar.no/user/register">Sign up</a></section>
+      <a ng-href="https://data.npolar.no/user/login?username={{user.username}}">Forgot password?</a>&nbsp;
+      <a href="https://data.npolar.no/user/register">Sign up</a></section>
     </form>
   </div>
 </div>
