--- a/src/partials/admin/edit_observation.html
+++ b/src/partials/admin/edit_observation.html
@@ -1,14 +1,17 @@
 
 
-<h1><b> Edit observation {{ entry.id }} <b></h1>
+<!-- <h1><b> Edit observation {{ entry.id }} <b></h1> -->
 
-<div ng-show="isAdmin">
+<npdc:formula></npdc:formula>
+
+
+
 <input TYPE="button" value="Back" onClick="parent.location='quality_check/'">
-</div>
+<!-- <div ng-show="isAdmin"> </div> -->
 
-<div ng-show="!isAdmin">
+<!-- <div ng-show="!isAdmin">
       <p>Please <a href="/sighting">log in</a> with your admin account in order to view this page.</p>
-</div>
+</div> -->
 
 
 
