--- a/src/partials/user/edit_observation.html
+++ b/src/partials/user/edit_observation.html
@@ -1,8 +1,8 @@
 
-<h1><b> Edit observation {{ entry.id }} <b></h1>
+<!--<h1><b> Edit observation {{ entry.id }} <b></h1> -->
 
 <!-- <div ng-if="security.isAuthenticated()">  -->
-
+<npdc:formula></npdc:formula>
 <button ng-click="duplicate()">duplicate</button>
 
 <!-- </div> -->
