edit & upload edit working

--- a/src/partials/admin/upload.html
+++ b/src/partials/admin/upload.html
@@ -6,10 +6,12 @@
 
 
 
-<form ng-controller="UploadObservationsCtrl">
+<!--<form ng-controller="UploadObservationsCtrl">
 
        <upload-observations/>
-</form>
+</form> -->
+
+<npdc:formula></npdc:formula>
 
 
 
